src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Adventure_Cost__c</fullName>
        <label>Adventure Cost</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinder_Volume__c</fullName>
        <description>Volume of the cylinder</description>
        <formula>3.14159 * (radius__c^2) * height__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cylinder Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <description>Number of days remaining to complete the opportunity.</description>
        <formula>IF (TODAY() &lt; CloseDate, CloseDate - TODAY(), 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Progress__c</fullName>
        <formula>IF (Percent_Completed__c &lt; 0.25, &quot;Early&quot;,
IF (Percent_Completed__c &gt; 0.75, &quot;Late&quot;, &quot;Middle&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Completed__c</fullName>
        <description>Represent the percentage of time elapsed, since the opportunity start date</description>
        <formula>IF (TODAY() &lt; CloseDate,
   (TODAY() - DATEVALUE(CreatedDate) ) / ( CloseDate - DATEVALUE(CreatedDate) ),
   1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>height__c</fullName>
        <inlineHelpText>Height of the cylinder</inlineHelpText>
        <label>height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>radius__c</fullName>
        <inlineHelpText>Radius of the cylinder</inlineHelpText>
        <label>radius</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rdcc__Address_Line_1__c</fullName>
        <formula>rdcc__Project__r.rdcc__Address_Line_1__c</formula>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Address_Line_2__c</fullName>
        <formula>rdcc__Project__r.rdcc__Address_Line_2__c</formula>
        <label>Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Bid_Date__c</fullName>
        <formula>rdcc__Project__r.rdcc__Bid_Date_Only__c</formula>
        <label>Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rdcc__City__c</fullName>
        <formula>rdcc__Project__r.rdcc__City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Country__c</fullName>
        <formula>rdcc__Project__r.rdcc__Country__c</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__County__c</fullName>
        <formula>rdcc__Project__r.rdcc__County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rdcc__Estimated_Value__c</fullName>
        <formula>rdcc__Project__r.rdcc__Estimated_Value__c</formula>
        <label>Estimated Project Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rdcc__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Categories__c</fullName>
        <label>Project Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Company_Roles__c</fullName>
        <label>Project Company Role</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Scope__c</fullName>
        <label>Project Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Stage__c</fullName>
        <formula>Text(rdcc__Project__r.rdcc__Stage__c)</formula>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Work_Type__c</fullName>
        <formula>TEXT( rdcc__Project__r.rdcc__Work_Type__c )</formula>
        <label>Project Work Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rdcc__ReedProject__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_id__c</fullName>
        <formula>rdcc__Project__r.rdcc__Project_ID__c</formula>
        <label>Project id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__State__c</fullName>
        <formula>rdcc__Project__r.rdcc__State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Zip__c</fullName>
        <formula>rdcc__Project__r.rdcc__Zip__c</formula>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>rdcc__All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>rdcc__Project__c</columns>
        <columns>rdcc__Estimated_Value__c</columns>
        <columns>rdcc__Project_Stage__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Close_Date_Alert</fullName>
        <active>true</active>
        <description>Alert if the date is not a future date</description>
        <errorConditionFormula>!IsClosed &amp;&amp; CloseDate &lt; TODAY()</errorConditionFormula>
        <errorMessage>Hey McFly, unless you are planning to go back in time, please update your close date.</errorMessage>
    </validationRules>
</CustomObject>